Scala Blaze update